[gd_scene load_steps=10 format=2]

[ext_resource path="res://sprites/maps/elevator/elevator_down.png" type="Texture" id=1]
[ext_resource path="res://sprites/maps/elevator/elevator_up.png" type="Texture" id=2]
[ext_resource path="res://scripts/Elevator.gd" type="Script" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "Down",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "Up",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 23, 4 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 22, 3 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 7, 40 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 19, 1 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 24, 1 )

[node name="Elevator" type="KinematicBody2D"]
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Down"

[node name="Bottom" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 43 )
shape = SubResource( 2 )

[node name="Top" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -45 )
shape = SubResource( 3 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -1 )
shape = SubResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 47 )
shape = SubResource( 5 )

[node name="CeilingCheck" type="RayCast2D" parent="."]
position = Vector2( 0, -48 )
enabled = true
cast_to = Vector2( 0, -1 )

[node name="FloorCheck" type="RayCast2D" parent="."]
position = Vector2( 0, 48 )
enabled = true
cast_to = Vector2( 0, 1 )

[node name="KillerArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillerArea"]
position = Vector2( 0, 49 )
shape = SubResource( 6 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="KillerArea" to="." method="_on_KillerArea_body_entered"]
